# hostmap

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: prompts.md
docs/superpowers/plans/: 2026-05-26-hostmap-roadmap-execution.md
hostmap/: __init__.py  cli.py  collect.py  diffing.py  parsers.py  redaction.py  review_pack.py  schema.py
skills/hostmap/: SKILL.md
tests/: test_bundle_contract.py  test_collect.py  test_collect_structured.py  test_diff.py  test_docs_contract.py  test_redaction.py
