[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hostmap"
version = "0.1.0"
description = "Read-only Linux host architecture mapper for safe reviewer bundles."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hostmap contributors" }]
keywords = ["linux", "architecture", "systemd", "docker", "ops", "documentation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Systems Administration",
]

[project.scripts]
hostmap = "hostmap.cli:main"

[tool.setuptools.packages.find]
include = ["hostmap*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
